--- a/main/home.html
+++ b/main/home.html
@@ -2,33 +2,52 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Make a Reservation</title>
+    <title>Table Pages</title>
     <!-- Latest compiled and minified CSS & JS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
     <div class="container">
-        <div class="jumbotron text-center">
-            <h1>
-                <span class="fa fa-fire"></span>Hot Restaurant</h1>
-            <h3>We only have 5 tables! Book Your Seat before they are all gone!</h3>
+        <div class="jumbotron">
+            <h1 class="text-center">
+                <span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
+            <br>
+            <h2 class="text-center">We only have 5 tables! Book your seat before they are all gone!</h2>
             <hr>
-            <a href="/">
-                <button class="btn btn-primary btn-lg">
-                    <span class="fa fa-list-alt"></span> View Tables</button>
-            </a>
-            <a href="#" class="btn btn-info btn-lg">
-                <span class="glyphicon glyphicon-home"></span> Home
-            </a>
+
+            <div class="text-center">
+                <a href="/view">
+                    <button type="button" class="btn btn-lg btn-primary">
+                        <span class="glyphicon glyphicon-list-alt"></span> View Tables
+                    </button>
+                </a>
+                <a href="/make">
+                    <button type="button" class="btn btn-lg btn-danger">
+                        <span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button>
+                </a>
+            </div>
+            <br>
+            <br>
+
+            <footer class="footer">
+                <div class "container">
+                    <p>
+                        <a href="#">API Table Link</a> |
+                        <a href="#">API Wait List</a> |
+                        <a href="https://github.com/elkaleemom11/appReservation">Github Repo</a>
+                    </p>
+                </div>
+
+            </footer>
+            </script>
         </div>
-        </script>
-        <a href="url">API Table Link</a>
-        <a href="url">| API Wait List</a>
+    </div>
+
 </body>
 
 </html>
