--- a/main/make.html
+++ b/main/make.html
@@ -2,101 +2,173 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Make a Reservation</title>
+    <title>Table Pages</title>
     <!-- Latest compiled and minified CSS & JS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
+
     <div class="container">
-        <div class="jumbotron text-center">
-
-            <h1>
-                <span class="fa fa-fire"></span>Hot Restaurant</h1>
-            <h3>Make your reservation!</h3>
+        <div class="jumbotron">
+            <h1 class="text-center">
+                <span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
+            <br>
+            <h2 class="text-center">Make your reservation!</h2>
             <hr>
-            <a href="/">
-                <button class="btn btn-primary btn-lg">
-                    <span class="fa fa-list-alt"></span> View Tables</button>
-            </a>
-            <a href="#" class="btn btn-info btn-lg">
-                <span class="glyphicon glyphicon-home"></span> Home
-            </a>
-            </a>
-        </div>
-        <div class="row">
 
-
-            <div class="col-lg-12">
-
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">
-                            <strong>Table Reservations</strong>
-                        </h3>
-                    </div>
-                    <div class="panel-body">
-                        <form method="POST" role="form">
-
-                            <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" class="form-control" id="name">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="phone number">Phone number</label>
-                                <input type="text" class="form-control" id="role">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="email">email</label>
-                                <input type="text" class="form-control" id="age">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="unique-id">Unique ID</label>
-                                <input type="text" class="form-control" id="unique-ID">
-                            </div>
-
-                        </form>
-                        <br>
-                        <div class="text-left">
-                            <button type="submit" class="btn btn-primary btn-md" id="add-btn">
-                                <span>Submit</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
+            <div class="text-center">
+                <a href="/view">
+                    <button type="button" class="btn btn-lg btn-primary">
+                        <span class="glyphicon glyphicon-list-alt"></span> View Tables
+                    </button>
+                </a>
+                <a href="/make">
+                    <button type="button" class="btn btn-lg btn-default">
+                        <span class="glyphicon glyphicon-home"></span>
+                    </button>
+                </a>
             </div>
         </div>
-    </div>
-
-    <script type="text/javascript">
-
-        $("#add-btn").on("click", function (event) {
-            event.preventDefault();
-            var newTableReservation = {
-                name: $("#name").val().trim(),
-                phone_number: $("#phone").val().trim(),
-                email: $("email").val().trim(),
-                unique_id: $("#unique-id").val().trim()
-            };
+        <div class="row">
+            <div class="col-lg-12">
 
 
-            $.post("/api/reservation", newTableReservation)
-                .then(function (data) {
-                    console.log("add.html", data);
-                    alert("Adding reservation...");
-                });
-        });
-    </script>
-    <a href="url">API Table Link</a>
-    <a href="url">| API Wait List</a>
+                <!-- Reservation Page -->
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+
+
+
+                    </div>
+
+
+
+
+
+                </div>
+
+
+
+
+
+
+
+
+
+            </div>
+
+
+
+        </div>
+        <br>
+        <br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="container">
+            <div class="jumbotron text-center">
+
+                <h1>
+                    <span class="fa fa-fire"></span>Hot Restaurant</h1>
+                <h3>Make your reservation!</h3>
+                <hr>
+                <a href="/">
+                    <button class="btn btn-primary btn-lg">
+                        <span class="fa fa-list-alt"></span> View Tables</button>
+                </a>
+                <a href="#" class="btn btn-info btn-lg">
+                    <span class="glyphicon glyphicon-home"></span> Home
+                </a>
+                </a>
+            </div>
+            <div class="row">
+
+
+                <div class="col-lg-12">
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">
+                                <strong>Table Reservations</strong>
+                            </h3>
+                        </div>
+                        <div class="panel-body">
+                            <form method="POST" role="form">
+
+                                <div class="form-group">
+                                    <label for="name">Name</label>
+                                    <input type="text" class="form-control" id="name">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="phone number">Phone number</label>
+                                    <input type="text" class="form-control" id="role">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="email">email</label>
+                                    <input type="text" class="form-control" id="age">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="unique-id">Unique ID</label>
+                                    <input type="text" class="form-control" id="unique-ID">
+                                </div>
+
+                            </form>
+                            <br>
+                            <div class="text-left">
+                                <button type="submit" class="btn btn-primary btn-md" id="add-btn">
+                                    <span>Submit</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <script type="text/javascript">
+
+            $("#add-btn").on("click", function (event) {
+                event.preventDefault();
+                var newTableReservation = {
+                    name: $("#name").val().trim(),
+                    phone_number: $("#phone").val().trim(),
+                    email: $("email").val().trim(),
+                    unique_id: $("#unique-id").val().trim()
+                };
+
+
+                $.post("/api/reservation", newTableReservation)
+                    .then(function (data) {
+                        console.log("add.html", data);
+                        alert("Adding reservation...");
+                    });
+            });
+        </script>
+        <a href="url">API Table Link</a>
+        <a href="url">| API Wait List</a>
 </body>
 
 </html>
