trying to commit

--- a/main/view.html
+++ b/main/view.html
@@ -66,6 +66,8 @@
     <a href="url">Clear Table</a>
     <a href="url">| API Table Link</a>
     <a href="url">| API Wait List</a>
+
+    <!-- end -->
 </body>
 
 </html>
